--- a/css.css
+++ b/css.css
@@ -1,5 +1,9 @@
-h1 { font-size: 20px ;
+h1 { 
+  font-size: 20px ;
+  text-align: center;
 }
 
-h2 { font-size: 20px ;
+h2 { 
+  font-size: 20px ;
+  text-align: center;
 }
